src/test/deca/context/valid/personal/class_field_object.deca
// Description:
//    test minimaliste pour testé le pass 2 (object est dans  l'environnement de base)
//
// Resultats:
//
//
//
// Historique:
//    cree le 14/01/2025

class A{
    object o;
}

